--- a/charts1.html
+++ b/charts1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Settings</title>
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
@@ -60,6 +61,12 @@
 		    <label for="inputBarDistance" class="col-sm-2 control-label">Bar distance</label>
 		    <div class="col-sm-10">
 		    	<input type="number" name="barDistance" value="2" id="inputBarDistance" class="form-control" />
+		    </div>
+		  </div>
+  		  <div class="form-group">
+		    <label for="inputBarScale" class="col-sm-2 control-label">Bar scale</label>
+		    <div class="col-sm-10">
+		    	<input type="number" name="barScale" value="10000000" id="inputBarScale" class="form-control" />
 		    </div>
 		  </div>
   		  <div class="form-group">
@@ -128,6 +135,8 @@
                 });
 
                 settings.dataMaxBarValue = [data[0][2], data[0][4]];
+                var wrongMax = Math.max(data[0][2], data[0][4]);
+                settings.dataMaxBarValue = [wrongMax, wrongMax];
 
                 data.forEach(function(row) {
                     var ISOCode = countryToIsoMap[row[1]];
@@ -172,7 +181,7 @@
 			        .attr("version", 1.1)
 			        .attr("xmlns", "http://www.w3.org/2000/svg")
 			        .node().parentNode.innerHTML;
-		        var base64 = btoa(html);
+		        var base64 = btoa(unescape(encodeURIComponent(html)));
 		        console.log(arguments)
 
 			    d3.select("body").append("div")
@@ -257,6 +266,24 @@
                     .attr('font-size', +(options.fontSize))
                     .attr('text-anchor', 'middle');
 				
+
+				charts
+					.enter()
+					.append('rect')
+					.attr('x', 50)
+					.attr('y', 500)
+					.attr('width', 2)
+					.attr('height', calcHeight(options.barScale, options.dataMaxBarValue[0]))
+					.style('fill', 'black');
+					
+				charts
+					.enter()
+					.append('text')
+					.attr('x', 70)
+					.attr('y', 500 + +(options.fontSize) / 2 + calcHeight(options.barScale, options.dataMaxBarValue[0]) / 2)
+                    .attr('font-size', +(options.fontSize))
+					.text('Мащаб за ' + options.barScale + ' единици')
+
             });
 
 
